@@ -66,6 +66,7 @@ import java.nio.ByteBuffer;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.zip.ZipEntry;
@@ -81,14 +82,28 @@ import static org.apache.solr.filestore.TestDistribPackageStore.*;
 public class TestPackages extends SolrCloudTestCase {
 
   @Before
-  public void setup() {
+  @Override
+  public void setUp() throws Exception {
+    super.setUp();
     System.setProperty("enable.packages", "true");
+    configureCluster(4)
+        .withJettyConfig(jetty -> jetty.enableV2(true))
+        .addConfig("conf", configset("conf2"))
+        .addConfig("conf1", configset("schema-package"))
+        .configure();
   }
-  
+
   @After
-  public void teardown() {
+  @Override
+  public void tearDown() throws Exception {
+    if (cluster != null) {
+      cluster.shutdown();
+    }
     System.clearProperty("enable.packages");
+
+    super.tearDown();
   }
+
   public static class ConfigPlugin implements ReflectMapWriter {
     @JsonProperty
     public String name;
@@ -98,13 +113,9 @@ public class TestPackages extends SolrCloudTestCase {
   }
 
 
+  @AwaitsFix(bugUrl = "https://issues.apache.org/jira/browse/SOLR-15448")
+  @Test
   public void testCoreReloadingPlugin() throws Exception {
-    MiniSolrCloudCluster cluster =
-            configureCluster(4)
-                    .withJettyConfig(jetty -> jetty.enableV2(true))
-                    .addConfig("conf", configset("conf2"))
-                    .configure();
-    try {
       String FILE1 = "/mypkg/runtimelibs.jar";
       String COLLECTION_NAME = "testCoreReloadingPluginColl";
       byte[] derFile = readFile("cryptokeys/pub_key512.der");
@@ -127,7 +138,7 @@ public class TestPackages extends SolrCloudTestCase {
               () -> new V2Request.Builder("/cluster/package").
                       withMethod(SolrRequest.METHOD.GET)
                       .build().process(cluster.getSolrClient()),
-              Utils.makeMap(
+              Map.of(
                       ":result:packages:mypkg[0]:version", "1.0",
                       ":result:packages:mypkg[0]:files[0]", FILE1
               ));
@@ -146,7 +157,7 @@ public class TestPackages extends SolrCloudTestCase {
               () -> new V2Request.Builder("/cluster/package").
                       withMethod(SolrRequest.METHOD.GET)
                       .build().process(cluster.getSolrClient()),
-              Utils.makeMap(
+              Map.of(
                       ":result:packages:mypkg[1]:version", "2.0",
                       ":result:packages:mypkg[1]:files[0]", FILE1
               ));
@@ -155,19 +166,11 @@ public class TestPackages extends SolrCloudTestCase {
       verifyComponent(cluster.getSolrClient(),
               COLLECTION_NAME, "query", "filterCache",
               "mypkg", "2.0" );
-    } finally {
-      cluster.shutdown();
-    }
   }
+
+  @AwaitsFix(bugUrl = "https://issues.apache.org/jira/browse/SOLR-15448")
   @Test
-  @SuppressWarnings({"unchecked"})
   public void testPluginLoading() throws Exception {
-    MiniSolrCloudCluster cluster =
-        configureCluster(4)
-            .withJettyConfig(jetty -> jetty.enableV2(true))
-            .addConfig("conf", configset("cloud-minimal"))
-            .configure();
-    try {
       String FILE1 = "/mypkg/runtimelibs.jar";
       String FILE2 = "/mypkg/runtimelibs_v2.jar";
       String FILE3 = "/mypkg/runtimelibs_v3.jar";
@@ -208,7 +211,7 @@ public class TestPackages extends SolrCloudTestCase {
           () -> new V2Request.Builder("/cluster/package").
               withMethod(SolrRequest.METHOD.GET)
               .build().process(cluster.getSolrClient()),
-          Utils.makeMap(
+          Map.of(
               ":result:packages:mypkg[0]:version", "1.0",
               ":result:packages:mypkg[0]:files[0]", FILE1
           ));
@@ -269,10 +272,10 @@ public class TestPackages extends SolrCloudTestCase {
       TestDistribPackageStore.assertResponseValues(10,
           cluster.getSolrClient() ,
           new GenericSolrRequest(SolrRequest.METHOD.GET,
-              "/stream", new MapSolrParams((Map) Utils.makeMap("collection", COLLECTION_NAME,
+              "/stream", new MapSolrParams(Map.of("collection", COLLECTION_NAME,
                   WT, JAVABIN,
                   "action", "plugins"
-                  ))), Utils.makeMap(
+                  ))), Map.of(
               ":plugins:mincopy", "org.apache.solr.client.solrj.io.stream.metrics.MinCopyMetric"
           ));
 
@@ -289,17 +292,17 @@ public class TestPackages extends SolrCloudTestCase {
 
       executeReq( "/" + COLLECTION_NAME + "/runtime?wt=javabin", cluster.getRandomJetty(random()),
           Utils.JAVABINCONSUMER,
-          Utils.makeMap("class", "org.apache.solr.core.RuntimeLibReqHandler"));
+          Map.of("class", "org.apache.solr.core.RuntimeLibReqHandler"));
 
       executeReq( "/" + COLLECTION_NAME + "/get?wt=json", cluster.getRandomJetty(random()),
           Utils.JSONCONSUMER,
-          Utils.makeMap("class", "org.apache.solr.core.RuntimeLibSearchComponent",
+          Map.of("class", "org.apache.solr.core.RuntimeLibSearchComponent",
               "Version","1"));
 
 
       executeReq( "/" + COLLECTION_NAME + "/runtime?wt=json1", cluster.getRandomJetty(random()),
           Utils.JSONCONSUMER,
-          Utils.makeMap("wt", "org.apache.solr.core.RuntimeLibResponseWriter"));
+          Map.of("wt", "org.apache.solr.core.RuntimeLibResponseWriter"));
 
       //now upload the second jar
       postFileAndWait(cluster, "runtimecode/runtimelibs_v2.jar.bin", FILE2,
@@ -331,7 +334,7 @@ public class TestPackages extends SolrCloudTestCase {
 
       executeReq( "/" + COLLECTION_NAME + "/get?wt=json", cluster.getRandomJetty(random()),
           Utils.JSONCONSUMER,
-          Utils.makeMap(  "Version","2"));
+          Map.of(  "Version","2"));
 
 
       //now upload the third jar
@@ -357,7 +360,7 @@ public class TestPackages extends SolrCloudTestCase {
 
       executeReq( "/" + COLLECTION_NAME + "/runtime?wt=json", cluster.getRandomJetty(random()),
           Utils.JSONCONSUMER,
-          Utils.makeMap("Version","2"));
+          Map.of("Version","2"));
 
       //insert a doc with urp
       ur = new UpdateRequest();
@@ -498,11 +501,8 @@ public class TestPackages extends SolrCloudTestCase {
           .process(cluster.getSolrClient());
       cluster.waitForActiveCollection(COLLECTION_NAME, 2, 5);
       checkAllNodesForFile(cluster,FILE3,
-          Utils.makeMap(":files:" + FILE3 + ":name", "runtimelibs_v3.jar"),
+          Map.of(":files:" + FILE3 + ":name", "runtimelibs_v3.jar"),
           false);
-    } finally {
-      cluster.shutdown();
-    }
   }
   @SuppressWarnings({"unchecked","rawtypes"})
   private void executeReq(String uri, JettySolrRunner jetty, Utils.InputStreamConsumer parser, Map expected) throws Exception {
@@ -521,8 +521,7 @@ public class TestPackages extends SolrCloudTestCase {
 
   private void verifyComponent(SolrClient client, String COLLECTION_NAME,
                                String componentType, String componentName, String pkg, String version) throws Exception {
-    @SuppressWarnings({"unchecked"})
-    SolrParams params = new MapSolrParams((Map) Utils.makeMap("collection", COLLECTION_NAME,
+    SolrParams params = new MapSolrParams(Map.of("collection", COLLECTION_NAME,
         WT, JAVABIN,
         "componentName", componentName,
         "meta", "true"));
@@ -531,21 +530,15 @@ public class TestPackages extends SolrCloudTestCase {
         "/config/" + componentType, params);
     TestDistribPackageStore.assertResponseValues(10,
         client,
-        req1, Utils.makeMap(
+        req1, Map.of(
             ":config:" + componentType + ":" + componentName + ":_packageinfo_:package", pkg,
             ":config:" + componentType + ":" + componentName + ":_packageinfo_:version", version
         ));
   }
 
   @Test
+  @SuppressWarnings("unchecked")
   public void testAPI() throws Exception {
-    System.setProperty("enable.packages", "true");
-    MiniSolrCloudCluster cluster =
-        configureCluster(4)
-            .withJettyConfig(jetty -> jetty.enableV2(true))
-            .addConfig("conf", configset("cloud-minimal"))
-            .configure();
-    try {
       String errPath = "/error/details[0]/errorMessages[0]";
       String FILE1 = "/mypkg/v.0.12/jar_a.jar";
       String FILE2 = "/mypkg/v.0.12/jar_b.jar";
@@ -554,7 +547,7 @@ public class TestPackages extends SolrCloudTestCase {
       Package.AddVersion add = new Package.AddVersion();
       add.version = "0.12";
       add.pkg = "test_pkg";
-      add.files = Arrays.asList(new String[]{FILE1, FILE2});
+      add.files = List.of(FILE1, FILE2);
       V2Request req = new V2Request.Builder("/cluster/package")
           .forceV2(true)
           .withMethod(SolrRequest.METHOD.POST)
@@ -569,7 +562,7 @@ public class TestPackages extends SolrCloudTestCase {
       postFileAndWait(cluster, "runtimecode/runtimelibs.jar.bin", FILE1, null);
 
 
-      add.files = Arrays.asList(new String[]{FILE1});
+      add.files = Collections.singletonList(FILE1);
       expectError(req, cluster.getSolrClient(), errPath,
           FILE1 + " has no signature");
       //now we upload the keys
@@ -580,7 +573,7 @@ public class TestPackages extends SolrCloudTestCase {
           "L3q/qIGs4NaF6JiO0ZkMUFa88j0OmYc+I6O7BOdNuMct/xoZ4h73aZHZGc0+nmI1f/U3bOlMPINlSOM6LK3JpQ==");
       // with correct signature
       //after uploading the file, let's delete the keys to see if we get proper error message
-      add.files = Arrays.asList(new String[]{FILE2});
+      add.files = Collections.singletonList(FILE2);
       /*expectError(req, cluster.getSolrClient(), errPath,
           "ZooKeeper does not have any public keys");*/
 
@@ -592,11 +585,11 @@ public class TestPackages extends SolrCloudTestCase {
 
       //Now verify the data in ZK
       TestDistribPackageStore.assertResponseValues(1,
-          () -> new MapWriterMap((Map) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
+          () -> new MapWriterMap((Map<String,Object>) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
               null, new Stat(), true))),
-          Utils.makeMap(
+          Map.of(
               ":packages:test_pkg[0]:version", "0.12",
-              ":packages:test_pkg[0]:files[0]", FILE1
+              ":packages:test_pkg[0]:files[0]", FILE2
           ));
 
       //post a new jar with a proper signature
@@ -607,15 +600,15 @@ public class TestPackages extends SolrCloudTestCase {
       //this time we are adding the second version of the package (0.13)
       add.version = "0.13";
       add.pkg = "test_pkg";
-      add.files = Arrays.asList(new String[]{FILE3});
+      add.files = Collections.singletonList(FILE3);
 
       //this request should succeed
       req.process(cluster.getSolrClient());
       //no verify the data (/packages.json) in ZK
       TestDistribPackageStore.assertResponseValues(1,
-          () -> new MapWriterMap((Map) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
+          () -> new MapWriterMap((Map<String,Object>) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
               null, new Stat(), true))),
-          Utils.makeMap(
+          Map.of(
               ":packages:test_pkg[1]:version", "0.13",
               ":packages:test_pkg[1]:files[0]", FILE3
           ));
@@ -637,11 +630,11 @@ public class TestPackages extends SolrCloudTestCase {
       req.process(cluster.getSolrClient());
       //Verify with ZK that the data is correct
       TestDistribPackageStore.assertResponseValues(1,
-          () -> new MapWriterMap((Map) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
+          () -> new MapWriterMap((Map<String,Object>) Utils.fromJSON(cluster.getZkClient().getData(SOLR_PKGS_PATH,
               null, new Stat(), true))),
-          Utils.makeMap(
+          Map.of(
               ":packages:test_pkg[0]:version", "0.13",
-              ":packages:test_pkg[0]:files[0]", FILE2
+              ":packages:test_pkg[0]:files[0]", FILE3
           ));
 
       //So far we have been verifying the details with  ZK directly
@@ -655,14 +648,11 @@ public class TestPackages extends SolrCloudTestCase {
               return (NavigableObject) Utils.executeGET(solrClient.getHttpClient(), path, Utils.JAVABINCONSUMER);
             }
           }
-        }, Utils.makeMap(
+        }, Map.of(
             ":result:packages:test_pkg[0]:version", "0.13",
             ":result:packages:test_pkg[0]:files[0]", FILE3
         ));
       }
-    } finally {
-      cluster.shutdown();
-    }
   }
   public static class C extends RequestHandlerBase implements SolrCoreAware   {
     static boolean informCalled = false;
@@ -700,16 +690,12 @@ public class TestPackages extends SolrCloudTestCase {
     }
   }
 
+  @AwaitsFix(bugUrl = "https://issues.apache.org/jira/browse/SOLR-15448")
+  @Test
   public void testSchemaPlugins() throws Exception {
     String COLLECTION_NAME = "testSchemaLoadingColl";
     System.setProperty("managed.schema.mutable", "true");
 
-    MiniSolrCloudCluster cluster =
-            configureCluster(4)
-                    .withJettyConfig(jetty -> jetty.enableV2(true))
-                    .addConfig("conf1", configset("schema-package"))
-                    .configure();
-    try {
       String FILE1 = "/schemapkg/schema-plugins.jar";
       byte[] derFile = readFile("cryptokeys/pub_key512.der");
       uploadKey(derFile, PackageStoreAPI.KEYS_DIR+"/pub_key512.der", cluster);
@@ -735,7 +721,7 @@ public class TestPackages extends SolrCloudTestCase {
           () -> new V2Request.Builder("/cluster/package").
               withMethod(SolrRequest.METHOD.GET)
               .build().process(cluster.getSolrClient()),
-          Utils.makeMap(
+          Map.of(
               ":result:packages:schemapkg[0]:version", "1.0",
               ":result:packages:schemapkg[0]:files[0]", FILE1
           ));
@@ -746,7 +732,7 @@ public class TestPackages extends SolrCloudTestCase {
       cluster.waitForActiveCollection(COLLECTION_NAME, 2, 4);
 
       verifySchemaComponent(cluster.getSolrClient(), COLLECTION_NAME, "/schema/fieldtypes/myNewTextFieldWithAnalyzerClass",
-              Utils.makeMap(":fieldType:analyzer:charFilters[0]:_packageinfo_:version" ,"1.0",
+              Map.of(":fieldType:analyzer:charFilters[0]:_packageinfo_:version" ,"1.0",
                       ":fieldType:analyzer:tokenizer:_packageinfo_:version","1.0",
                       ":fieldType:_packageinfo_:version","1.0"));
 
@@ -765,25 +751,19 @@ public class TestPackages extends SolrCloudTestCase {
           () -> new V2Request.Builder("/cluster/package").
               withMethod(SolrRequest.METHOD.GET)
               .build().process(cluster.getSolrClient()),
-          Utils.makeMap(
+          Map.of(
               ":result:packages:schemapkg[0]:version", "2.0",
               ":result:packages:schemapkg[0]:files[0]", FILE1
           ));
 
       verifySchemaComponent(cluster.getSolrClient(), COLLECTION_NAME, "/schema/fieldtypes/myNewTextFieldWithAnalyzerClass",
-          Utils.makeMap(":fieldType:analyzer:charFilters[0]:_packageinfo_:version" ,"2.0",
+          Map.of(":fieldType:analyzer:charFilters[0]:_packageinfo_:version" ,"2.0",
               ":fieldType:analyzer:tokenizer:_packageinfo_:version","2.0",
               ":fieldType:_packageinfo_:version","2.0"));
-
-    } finally {
-      cluster.shutdown();
-    }
-
   }
-  @SuppressWarnings({"rawtypes","unchecked"})
   private void verifySchemaComponent(SolrClient client, String COLLECTION_NAME, String path,
-                                     Map expected) throws Exception {
-    SolrParams params = new MapSolrParams((Map) Utils.makeMap("collection", COLLECTION_NAME,
+                                     Map<String, Object> expected) throws Exception {
+    SolrParams params = new MapSolrParams(Map.of("collection", COLLECTION_NAME,
         WT, JAVABIN,
         "meta", "true"));
 
@@ -802,7 +782,7 @@ public class TestPackages extends SolrCloudTestCase {
         fileContent,
         path, sig);// has file, but no signature
 
-    TestDistribPackageStore.checkAllNodesForFile(cluster, path, Utils.makeMap(
+    TestDistribPackageStore.checkAllNodesForFile(cluster, path, Map.of(
         ":files:" + path + ":sha512",
         sha512
     ), false);
